--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello World
+theme: jekyll-theme-hacker
+title: Welcome to my new crappy website!
+description: This might seriously evolve with time...
